<resources>
    <string name="app_name">Picture the World</string>
    <string name="app_description">Get recommendations of places to go and things to see from wherever you are!</string>
    <string name="title_activity_maps">Nearby Places</string>
    <string name="title_activity_place">Nearby Place</string>
    <string name="map_view">Places Map</string>
    <string name="list_view">Places List</string>
    <string name="user_photos_view">See Your Photos</string>
    <string name="home">Home</string>

    <string name="get_started">Click the button below to get started!</string>
    <string name="find_places">Find nearby places</string>
    <string name="next_steps">Once you\'ve found nearby places, feel free to browse them using the list or map icons above.</string>

    <string name="place_name">Place name</string>
    <string name="place_description">Place description</string>
    <string name="place_credit">Place credit</string>
    <string name="place_location">Place location</string>

    <string name="place_list_item">place_list_item</string>
    <string name="current_lat">current_lat</string>
    <string name="current_lng">current_lng</string>
    <string name="place_id">place_id</string>
    <string name="place_item_name">place_item_name</string>
    <string name="place_no_photos">This place has no photos. Why not try taking one yourself?</string>

    <string name="user_credit">Credit yourself!</string>
    <string name="take_photo">Take Photo</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="user_no_photos">You haven\'t taken any photos yet!</string>
    <string name="delete">Delete</string>

    <string name="sure">Are you sure?</string>
    <string name="delete_user_photo">Do you want to permanently delete this photo?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
