<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_view"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"
        android:title="@string/home"/>

    <item
        android:id="@+id/list_view"
        android:icon="@drawable/ic_places_list"
        app:showAsAction="ifRoom"
        android:title="@string/list_view"/>

    <item
        android:id="@+id/map_view"
        android:icon="@drawable/ic_map"
        app:showAsAction="ifRoom"
        android:title="@string/map_view"/>

    <item
        android:id="@+id/take_photo"
        android:icon="@drawable/ic_take_photo"
        app:showAsAction="ifRoom"
        android:title="@string/take_photo"/>
</menu>