<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp">

    <ImageView
        android:id="@+id/item_user_image"
        android:layout_width="wrap_content"
        android:layout_height="400dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/item_user_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_credit" />

            <TextView
                android:id="@+id/item_user_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_location" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/delete_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />
    </LinearLayout>

</LinearLayout>